Fixing spacing issues

--- a/attachments/css/layout.styl
+++ b/attachments/css/layout.styl
@@ -150,10 +150,12 @@ nav#menu
 
   #about
     float left
+    clear right
     width 58%
 
   #links
     float right
+    clear right
     width 40%
 
   .alt
